--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
-<html ng-app>
+<html ng-app="firstApp">
 <!-- ng-app tells angular what chunk of the DOM on your page it's allowed to handle -->
 <head>
   <title>Schwad's Angular Sandbox!</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <script src="app.js"></script>
 </head>
-<body>
-
+<body ng-controller = "FirstCtrl">
+    <h1>{{ title }}</h1>
+    <p>Hi, this is an {{ "Angular expression" }}.</p>
+    <p>It interpolates stuff, like {{ "strings" + " and simple operators"}}</p>
+    <p>It can even add 2 + 2 to make {{ 2 + 2 }}</p>
+    <p>But unlike an ERB tag, you can't just run any JavaScript you want. Trying to use off-the-shelf JS doesn't work, which is why you do not get a random number here: {{ Math.random() }}</p>
+    <h3>{{ secondTitle }}</h3>
+    <input type = "text" ng-model="secondTitle">
+    <input type = "text" ng-model="secondTitle">
+    <h4>Some Canines</h4>
+    <ul>
+      <li ng-repeat="dog in dogs"> {{ dog }}</li>
+    </ul>
 </body>
 </html>
